tests/invalid/scoping/out_of_scope.rs
/*
fail: 1
*/

main(): i32 {
    {
        a: i64 = 2;
    }
    return a;
}